force-app/main/default/objects/Skill_Attribute__c.object
<CustomObject>
    <description>This contains all the skill attribute that a record (e.g. case) must match to be able to assign with the required skill of an agent.</description>
    <fields>
        <fullName>Field_Name__c</fullName>
        <description>Object.FieldName - API name of the field</description>
        <label>Field Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>API name of the object</description>
        <label>Object Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <description>Operator - To determine the condition/state of the current record</description>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>==</fullName>
                    <label>equals</label>
                </value>
                <value>
                    <fullName>!=</fullName>
                    <label>not equals</label>
                </value>
                <value>
                    <fullName>in</fullName>
                    <isActive>false</isActive>
                    <label>in</label>
                </value>
                <value>
                    <fullName>not in</fullName>
                    <isActive>false</isActive>
                    <label>not in</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Contains the exact field value separated by semicolon(;)</description>
        <inlineHelpText>For multiple values, separate value with semicolon(;)</inlineHelpText>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Skill Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Object_Name__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Operator__c</columns>
        <columns>Value__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SA{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>